--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "node-cache": "^5.1.2"
+    "node-cache": "^5.1.2",
+    "striptags": "^3.2.0"
   }
 }
