--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "node-cache": "^5.1.2",
-    "striptags": "^3.2.0"
+    "node-cache": "^5.1.2"
   }
 }
